# NemoBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NemoBot.py  README.md  docker-compose-pull.sh  docker-compose.yml  echoHandler.py  linkedin2.py  mongo_connection.py  pyproject.toml  requestAccessMenu.py  requestsViewMenu.py  requirements.txt  room204.py  send_message.py  socials.py  socials_test.py  stats.py  template.env  tests.py  twitter.py  twitter2.py  youtube_notifications.py
.github/: workflows
.github/workflows/: alpine.yml  cd.yml  ci.yml
decorators/: adminOnly.py
menus/: menu.py  screen.py
myRedis/: InmemoryRedis_test.py  inmemoryRedis.py
notificator/: myHttpHandler.py  send_notifications.py  server.py  subscribe.py  xmlParser.py
src/decorators/: adminOnly.py  admin_only.py
src/errors/: error_codes.py
src/handlers/: basic.py  callback_query_handler.py  context_executors.py  echoHandler.py  echo_handler.py  room204.py  send_message.py  stats.py
src/menus/: errors.py  menu.py  screen.py
src/mongo/: mongo_connection.py
src/myRedis/: InmemoryRedis_test.py  inmemoryRedis.py
src/my_menus/: requestAccessMenu.py  request_access_menu.py  requestsViewMenu.py  requests_view_menu.py
src/my_redis/: inmemoryRedis.py  inmemory_redis.py  setup_redis.py
src/notificator/: myHttpHandler.py  my_http_handler.py  run_server.py  send_notifications.py  server.py  subscribe.py  xmlParser.py  xml_parser.py
src/socialsInteractions/: linkedin2.py  socials.py
src/socials_interactions/: linkedin2.py  socials.py  twitter2.py  youtube_notifications.py
src/utils/: alivePhrases.py  alive_phrases.py  echo.py  echo_commands.py  listCaching.py  list_caching.py  other.py  parseUrl.py  parse_url.py  printHandler.py  print_handler.py  queue.py
tests/: InmemoryRedis_test.py  Inmemory_redis_test.py  dec_test.py  inmemory_redis_test.py  tests.py
utils/: alivePhrases.py  echo.py  echo_commands.py  listCaching.py  other.py  parseUrl.py  printHandler.py
